feat: Switch weapons to table format
Closes #56

--- a/index.html
+++ b/index.html
@@ -173,14 +173,6 @@
                             </li>
                         </ul>
 
-                        <h2>Weapons & Attacks</h2>
-                        <div contenteditable="true" class="largearea" data-name="weapons"></div>
-
-                        <h2>Other Proficiencies</h2>
-                        <div contenteditable="true" class="largearea" data-name="proficiencies_other"></div>
-                    </section>
-
-                    <section>
                         <h2 id="page-skills">Skills</h2>
                         <ul class="pc-skills">
                             <li>
@@ -312,7 +304,22 @@
                         </ul>
                     </section>
 
-                    <section>
+                    <section class="grid-span-col-2">
+                        <h2>Weapons & Attacks</h2>
+                        <table class="table-editable" data-name="weapons">
+                            <thead>
+                                <th>Weapon</th><th>Att.</th><th>Damage</th><th>Notes</th>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+
+                        <h2>Features & Traits</h2>
+                        <div contenteditable="true" class="largearea" data-name="features"></div>
+
+                        <h2>Other Proficiencies</h2>
+                        <div contenteditable="true" class="largearea" data-name="proficiencies_other"></div>
+
                         <h2>Equipment</h2>
                         <div contenteditable="true" class="largearea" data-name="equipment"></div>
 
@@ -326,11 +333,6 @@
                                 <dt>PP</dt><dd contenteditable="true" class="small" data-name="pp" placeholder="0"></dd>
                             </div>
                         </dl>
-                    </section>
-
-                    <section>
-                        <h2>Features & Traits</h2>
-                        <div contenteditable="true" class="largearea" data-name="features"></div>
                     </section>
 
                     <section class="fullwidth">
