feat: Convert features and equipment to arrays/lists
Closes #57

--- a/index.html
+++ b/index.html
@@ -315,13 +315,13 @@
                         </table>
 
                         <h2>Features & Traits</h2>
-                        <div contenteditable="true" class="largearea" data-name="features"></div>
+                        <ul class="list-vertical" data-name="features"></ul>
 
                         <h2>Other Proficiencies</h2>
                         <div contenteditable="true" class="largearea" data-name="proficiencies_other"></div>
 
                         <h2>Equipment</h2>
-                        <div contenteditable="true" class="largearea" data-name="equipment"></div>
+                        <ul class="list-vertical" data-name="equipment"></ul>
 
                         <dl class="field">
                             <div>
