--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="alert-unsaved dialog" hidden>Unsaved changes...</div>
+        <div class="alert-unsaved dialog" hidden>Unsaved changes... <button type="button" class="btn-save btn-sm">Save</button></div>
         <div class="alert-main dialog" hidden></div>
         <div id="dialog-backup" class="dialog" hidden></div>
 
