feat(shortcuts): Add toggle load menu shortcut
Closes #60

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button type="button" class="btn-save">Save</button>
                  <div class="dropdown-container">
                     <button type="button" class="btn-load">Load</button>
-                    <div class="dropdown" id="character_list">
+                    <div class="dropdown" id="character_list" tabindex="-1">
                         <ul id="saved_characters"></ul>
                     </div>
                  </div>
@@ -606,6 +606,7 @@
                 <tbody>
                     <tr><td><em>Ctrl+Shift+S</em></td><td>Save current character</td></tr>
                     <tr><td><em>Ctrl+Shift+T</em></td><td>Switch Tabs</td></tr>
+                    <tr><td><em>Ctrl+Shift+L</em></td><td>Toggle Load Character menu (and focus on it).</td></tr>
                 </tbody>
             </table>
         </template>
