--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     </head>
     <body>
         <div class="alert-unsaved dialog" hidden>Unsaved changes... <button type="button" class="btn-save btn-sm">Save</button></div>
-        <div class="alert-main dialog" hidden></div>
-        <div id="dialog-backup" class="dialog" hidden></div>
+        <div id="alert-main" class="dialog" role="dialog" hidden></div>
+        <div id="dialog-backup" class="dialog" role="dialog" hidden></div>
+        <div id="dialog-restore" class="dialog" role="dialog" hidden></div>
 
         <div class="container">
             <div class="app-actions">
@@ -34,8 +35,8 @@
                     </div>
                  </div>
                 <button type="button" class="btn-new-character">New Character</button>
-                <button type="button" class="btn-backup">Backup</button>
-                <button type="button" class="btn-restore-backup">Restore Backup</button>
+                <button type="button" class="btn-backup btn-dialog">Backup</button>
+                <button type="button" class="btn-restore-backup btn-dialog">Restore Backup</button>
             </div>
             <header id="page-top" class="page-header">
                 <h1 class="pc-charname" data-name="charname" placeholder="Character Name" contenteditable=true></h1>
@@ -522,12 +523,10 @@
         </div>
 
         <script type="module">
-            import { default as EventEmitter } from './src/EventEmitter.js';
+            import { default as ActionMenu } from './src/ActionMenu.js';
+            import { default as EventEmitter } from './src/EventEmitter.js';            import { default as Manager } from './src/Manager.js';
             import { default as model } from './src/Character5e.js';
             import { default as ui } from './src/UI5e.js';
-            import { default as Manager } from './src/Manager.js';
-            import { default as ActionMenu } from './src/ActionMenu.js';
-            import { default as BackupDialog } from './src/BackupDialog.js';
 
             /**
             * Register service worker if it's supported
@@ -539,9 +538,7 @@
             }
 
             const emitter = new EventEmitter();
-
             ActionMenu.initialize(emitter);
-            BackupDialog.initialize(emitter);
 
             Manager.initialize({
                 emitter: emitter,
@@ -609,6 +606,35 @@
                     <tr><td><em>Ctrl+Shift+L</em></td><td>Toggle Load Character menu (and focus on it).</td></tr>
                 </tbody>
             </table>
+        </template>
+
+        <template id="backupModal">
+            <form id="form_backup_download" target="_self">
+                <fieldset>
+                    <legend tabindex="-1">Pick characters to download.</legend>
+                    <ul class="character_downloads"></ul>
+                </fieldset>
+                <fieldset>
+                    <legend>Pick a format</legend>
+                    <ul>
+                    <li><label><input type="radio" name="format" value="file" checked> File download</label></li>
+                    <li><label><input type="radio" name="format" value="email"> Email data</label></li>
+                </fieldset>
+                <button type="submit">Download</button>
+                <button type="button" class="close">Cancel</button>
+            </form>
+        </template>
+
+        <template id="restoreModal">
+            <form id="form_backup_restore" target="_self">
+                <label for="files">Restore from file</label>
+                <input type="file" id="files" name="files" />
+                <p>or</p>
+                <label for="backup_data">Paste the character backup data</label>
+                <textarea id="backup_data" name="backup_data"></textarea>
+                <button type="submit">Restore</button>
+                <button type="button" class="close">Cancel</button>
+            </form>
         </template>
     </body>
 </html>
