--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <button type="button" class="btn-restore-backup btn-dialog">Restore Backup</button>
             </div>
             <header id="page-top" class="page-header">
-                <h1 class="pc-charname" data-name="charname" placeholder="Character Name" contenteditable=true></h1>
+                <h1 class="pc-charname" data-name="charname" placeholder="Character Name" contenteditable="true" aria-label="Character Name"></h1>
                 <div class="menu-open">
                     <button type="button" class="btn-open-actions">Menu</button>
                 </div>
@@ -84,8 +84,8 @@
                             <div>
                                 <dt>Hit Dice</dt>
                                 <dd>
-                                    <span contenteditable="true" class="small" data-name="hd_cur" placeholder="1"></span> <strong>/</strong>
-                                    <span contenteditable="true" class="small" data-name="hd_max" placeholder="1"></span>
+                                    <span contenteditable="true" class="small" data-name="hd_cur" placeholder="1" aria-label="Current Hit Dice"></span> <strong>/</strong>
+                                    <span contenteditable="true" class="small" data-name="hd_max" placeholder="1" aria-label="Maximum Hit Dice"></span>
                                 </dd>
                             </div>
                             <div class="with_icon">
@@ -94,8 +94,8 @@
                             <div class="with_icon">
                                 <dt>Hit Points</dt>
                                 <dd>
-                                    <span contenteditable="true" class="small" data-name="hp_cur" placeholder="0"></span> <strong>/</strong>
-                                    <span contenteditable="true" class="small" data-name="hp_max" placeholder="0"></span>
+                                    <span contenteditable="true" class="small" data-name="hp_cur" placeholder="0" aria-label="Current Hit Points"></span> <strong>/</strong>
+                                    <span contenteditable="true" class="small" data-name="hp_max" placeholder="0" aria-label="Maximum Hit Points"></span>
                                 </dd>
                             </div>
                             <div>
