--- a/index.html
+++ b/index.html
@@ -608,9 +608,9 @@
             <table>
                 <thead><tr><th>Keys</th><th>Action</th></tr></thead>
                 <tbody>
-                    <tr><td><em>Ctrl+Shift+S</em></td><td>Save current character</td></tr>
-                    <tr><td><em>Ctrl+Shift+T</em></td><td>Switch Tabs</td></tr>
-                    <tr><td><em>Ctrl+Shift+L</em></td><td>Toggle Load Character menu (and focus on it).</td></tr>
+                    <tr><td><em>Ctrl+Shift+ArrowDown</em></td><td>Save current character</td></tr>
+                    <tr><td><em>Ctrl+Shift+ArrowLeft</em></td><td>Switch Tabs</td></tr>
+                    <tr><td><em>Ctrl+Shift+ArrowUp</em></td><td>Toggle Load Character menu (and focus on it).</td></tr>
                     <tr><td><em>Esc</em></td><td>Close modals/dialogs.</td></tr>
                     <tr><td><em>ArrowRight, ArrowLeft</em></td><td>Navigate the action toolbar at the top.</td></tr>
                 </tbody>
