add support for Class Points
(ki, grit, sorcerer points, etc.)

--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
                                     <input type="number" class="small" name="death_fail" data-name="deathSave" data-subfield="fail" value="0" min="0" max="3" aria-label="Death Save Fails" />
                                 </dd>
                             </div>
+                            <div>
+                                <dt>Class Points</dt>
+                                <dd>
+                                    <input type="number" class="small" name="class_cur" data-name="classPoints" data-subfield="cur" value="0" aria-label="Current Class Points" />
+                                    <strong>/</strong>
+                                    <input type="number" class="small" name="class_max" data-name="classPoints" data-subfield="max" value="0" aria-label="Maximum Class Points" />
+                                </dd>
+                            </div>
                         </dl>
                     </section>
 
