feat(skills): Add expertise checkbox
Closes #66

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="acrobatics" data-attr="dex" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="acrobatics" aria-label="Skill Expertise" />
                                     Acrobatics (Dex)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -190,6 +191,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="animal_handling" data-attr="wis" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="animal_handling" aria-label="Skill Expertise" />
                                     Animal Handling (Wis)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -197,6 +199,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="arcana" data-attr="intel" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="arcana" aria-label="Skill Expertise" />
                                     Arcana (Int)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -204,6 +207,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="athletics" data-attr="str"  />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="athletics" aria-label="Skill Expertise" />
                                     Athletics (Str)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -211,6 +215,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="deception" data-attr="cha" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="deception" aria-label="Skill Expertise" />
                                     Deception (Cha)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -218,6 +223,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="history" data-attr="intel" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="history" aria-label="Skill Expertise" />
                                     History (Int)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -225,6 +231,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="insight" data-attr="wis" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="insight" aria-label="Skill Expertise" />
                                     Insight (Wis)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -232,6 +239,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="intimidation" data-attr="cha" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="intimidation" aria-label="Skill Expertise" />
                                     Intimidation (Cha)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -239,6 +247,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="investigation" data-attr="intel" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="investigation" aria-label="Skill Expertise" />
                                     Investigation (Int)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -246,6 +255,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="medicine" data-attr="wis" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="medicine" aria-label="Skill Expertise" />
                                     Medicine (Wis)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -253,6 +263,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="nature" data-attr="intel" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="nature" aria-label="Skill Expertise" />
                                     Nature (Int)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -260,6 +271,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="perception" data-attr="wis" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="perception" aria-label="Skill Expertise" />
                                     Perception (Wis)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -267,6 +279,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="performance" data-attr="cha" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="performance" aria-label="Skill Expertise" />
                                     Performance (Cha)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -274,6 +287,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="persuasion" data-attr="cha" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="persuasion" aria-label="Skill Expertise" />
                                     Persuasion (Cha)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -281,6 +295,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="religion" data-attr="intel" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="religion" aria-label="Skill Expertise" />
                                     Religion (Int)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -288,6 +303,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="sleight_of_hand" data-attr="dex" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="sleight_of_hand" aria-label="Skill Expertise" />
                                     Sleight of Hand (Dex)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -295,6 +311,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="stealth" data-attr="dex" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="stealth" aria-label="Skill Expertise" />
                                     Stealth (Dex)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
@@ -302,6 +319,7 @@
                             <li>
                                 <label>
                                     <input type="checkbox" value=1 data-name="skills" data-subfield="survival" data-attr="wis" />
+                                    <input type="checkbox" value=1 data-name="expert" data-subfield="survival" aria-label="Skill Expertise" />
                                     Survival (Wis)
                                 </label>
                                 <span class="pc-skill-mod">0</span>
