feat(notes): Add party members fields
Closes #70

--- a/index.html
+++ b/index.html
@@ -495,8 +495,8 @@
                         <dl class="list-vertical" data-name="factions"></dl>
                     </section>
                     <section>
-                        <h2 id="page-notes">Character Notes</h2>
-                        <div contenteditable="true" class="largearea" data-name="notes"></div>
+                        <h2>Party Members</h2>
+                        <dl class="list-vertical" data-name="partymembers"></dl>
                     </section>
 
                     <section>
@@ -522,6 +522,11 @@
                     <section>
                         <h2>Campaign Notes</h2>
                         <dl class="list-vertical" data-name="notes_cam"></dl>
+                    </section>
+
+                    <section>
+                        <h2>Character Notes</h2>
+                        <div contenteditable="true" class="largearea" data-name="notes"></div>
                     </section>
                 </section>
             </main>
