--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
                                     <input type="number" class="small" name="death_fail" data-name="deathSave" data-subfield="fail" value="0" min="0" max="3" aria-label="Death Save Fails" />
                                 </dd>
                             </div>
+                            <div class="with_icon">
+                                <dt>Class Points</dt>
+                                <dd>
+                                    <input type="number" class="small" data-name="class_points" data-subfield="cur" placeholder="0" min="0" aria-label="Current Class Points"/> <strong>/</strong> <input type="number" class="small" data-name="class_points" data-subfield="max" placeholder="0" min="0" aria-label="Maximum Class Points" />
+                                </dd>
+                            </div>
                         </dl>
                     </section>
 
