docs(footer): Update my webpage url

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <h4>Character Sheet. 5e.</h4>
                 <ul>
                     <li><button type="button" class="btn-plain btn-help btn-dialog">Help</button></li>
-                    <li>Created by <a href="http://madinkbeard.com">Derik A Badman</a></li>
+                    <li>Created by <a href="https://derikbadman.com">Derik A Badman</a></li>
                     <li><a href="https://github.com/derikb/character-sheet-5e">Github</a></li>
                 </ul>
             </footer>
